@@ -157,6 +157,8 @@ public:
 
 private:
 
+	void map_timer(error_code const& ec);
+	void try_map_upnp(mutex::scoped_lock& l, bool timer = false);
 	void discover_device_impl(mutex::scoped_lock& l);
 	static address_v4 upnp_multicast_address;
 	static udp::endpoint upnp_multicast_endpoint;
@@ -253,6 +255,7 @@ private:
 			, lease_duration(default_lease_time)
 			, supports_specific_external(true)
 			, disabled(false)
+			, non_router(false)
 		{
 #if TORRENT_USE_ASSERTS
 			magic = 1337;
@@ -292,6 +295,13 @@ private:
 		bool supports_specific_external;
 		
 		bool disabled;
+
+		// this is true if the IP of this device is not
+		// one of our default routes. i.e. it may be someone
+		// else's router, we just happen to have multicast
+		// enabled across networks
+		// this is only relevant if ignore_non_routers is set.
+		bool non_router;
 
 		mutable boost::shared_ptr<http_connection> upnp_connection;
 
@@ -341,6 +351,13 @@ private:
 
 	// timer used to refresh mappings
 	deadline_timer m_refresh_timer;
+
+	// this timer fires one second after the last UPnP response. This is the
+	// point where we assume we have received most or all SSDP reponses. If we
+	// are ignoring non-routers and at this point we still haven't received a
+	// response from a router UPnP device, we override the ignoring behavior and
+	// map them anyway.
+	deadline_timer m_map_timer;
 	
 	bool m_disabled;
 	bool m_closing;
